--- a/dia1/index.html
+++ b/dia1/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First Page</title>
 </head>
 <body>
-    Holaaa
+    <h1>Hello!</h1>
+    <p>My name is Jhorguen Vargas</p>
 </body>
 </html>
