--- a/dia2/index.html
+++ b/dia2/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hoja de vida</title>
+    <link rel="stylesheet" href="src/styles/style.css">
 </head>
 <body>
 
     <table border="1" width="100%" cellpadding="5" cellspacing="0">
         <tr>
             <td width="25%" valign="top">
-                <img src="./src/images/IMG_0307.jpeg" alt="">
+                <img src="./src/images/1746804445131.jpeg" alt="">
                 <table border="1" width="100%" cellpadding="5" cellspacing="0">
                     <tr>
                         <td>
