--- a/dia2/index.html
+++ b/dia2/index.html
@@ -11,7 +11,8 @@
     <table border="1" width="100%" cellpadding="5" cellspacing="0">
         <tr>
             <td width="25%" valign="top">
-                <img src="./src/images/1746804445131.jpeg" alt="">
+                <img src="https://media.licdn.com/dms/image/v2/D4E03AQGEfJJGe7C7Ew/profile-displayphoto-shrink_800_800/B4EZa1qIYwGQAc-/0/1746804445131?e=1755734400&v=beta&t=FGOT2tVap8s5DP9uiKWhrGIau5nVnMFxp_0DA3Jw7_k" alt="">
+               
                 <table border="1" width="100%" cellpadding="5" cellspacing="0">
                     <tr>
                         <td>
