feat: :sparkles: adding new section with files images

--- a/dia4/index.html
+++ b/dia4/index.html
@@ -26,7 +26,7 @@
         <h1 id="text1">Your favorite content, on one place only.</h1>
         <p id="text2">Now you can enjoy everything from Amazon Prime Video and Twitch Prime with you Amazon Prime
             subscription on one place that brings all the entertainment you love.</p>
-        <a href="">
+        <a href="https://www.primevideo.com/offers/nonprimehomepage/ref=dvm_pds_brd_co_hk_s_g_mkw_srWXdTWBq-dc_pcrid_645960032596?mrntrk=slid__pgrid_42710650975_pgeo_9217193_x__adext__ptid_kwd-312570251680">
             <div id="sing-up">
                 Sing-up on Amazon
             </div>
@@ -37,9 +37,29 @@
         <h1 id="live">Live Content and the palm of your hand</h1>
         <br>
         <img id="tv" src="./src/images/tv.png" alt="tv">
-        <p id="p1">With 4K HDR quality, you can enjoy all of the live content you like to see , from Sports events to E-Sports events</p>
+        <p id="p1">With 4K HDR quality, you can enjoy all of the live content you like to see , from Sports events to
+            E-Sports events</p>
     </div>
 
+    <div class="blue-divs">
+        <h1 id="like">Don’t like to watch Live? No problem , we got you covered</h1>
+        <div id="movies">
+            <img src="./src/images/Rectangle 4.png" alt="">
+            <img src="./src/images/movie1.png" alt="">
+            <img src="./src/images/movie2.png" alt="">
+            <img src="./src/images/movie3.png" alt="">
+            <img src="./src/images/movie5.png" alt="">
+        </div>
+        <p id="p2">You’ll find a variety of movies, not only for adults<br> but also for your family, with our without internet. 24/7. On demand.</p>
+    </div>
+
+    <div class="blue-divs">
+        <h1 id="cancel">
+            Cancel any time , anywhere
+        </h1>
+        <img id="cancelar" src="./src/images/Icon metro-cancel.svg" alt="">
+        <p id="p3">If you don’t like our services, you can cancel anytime you want , no contracts,<br> no fees.</p>
+    </div>
 
 </body>
 
