feat: :tada: add section compatibles devices

--- a/dia4/index.html
+++ b/dia4/index.html
@@ -61,6 +61,16 @@
         <p id="p3">If you don’t like our services, you can cancel anytime you want , no contracts,<br> no fees.</p>
     </div>
 
+    <h1 id="compatibles">Compatibles devices</h1>
+    <p id="p4">There’s a range of devices where you can enjoy all of the content available in<br> Prime Entertainment:</p>
+
+    <div id="devices">
+        <img src="./src/images/FlechaIzq.png" alt="">
+        <img id="device1" src="./src/images/Image2.png" alt="">
+        <img id="device2" src="./src/images/Image1.png" alt="">
+        <img id="device3" src="./src/images/Image3.png" alt="">
+        <img src="./src/images/FlechaDer.png" alt="">
+    </div>
 </body>
 
 </html>
