--- a/dia4/index.html
+++ b/dia4/index.html
@@ -1,76 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./src/images/favicon.png">
-    <link rel="stylesheet" href="./src/styles/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="./src/images/favicon.png" />
+    <link rel="stylesheet" href="./src/styles/style.css" />
     <title>Prime Video</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <a href="">
-            <img src="./src/images/Icon awesome-search.svg" alt="">
-        </a>
-        <a href="">
-            <div id="login">
-                Login
-            </div>
-        </a>
+      <a href="">
+        <img src="./src/images/Icon awesome-search.svg" alt="" />
+      </a>
+      <a href="">
+        <div id="login">Login</div>
+      </a>
     </header>
     <div>
-        <img id="fondo1" src="./src/images/FondoTwitch.png" alt="Fondo">
-        <img id="prime" src="./src/images/LogoPrimeE2.png" alt="primeEntertaiment">
-        <h1 id="text1">Your favorite content, on one place only.</h1>
-        <p id="text2">Now you can enjoy everything from Amazon Prime Video and Twitch Prime with you Amazon Prime
-            subscription on one place that brings all the entertainment you love.</p>
-        <a href="https://www.primevideo.com/offers/nonprimehomepage/ref=dvm_pds_brd_co_hk_s_g_mkw_srWXdTWBq-dc_pcrid_645960032596?mrntrk=slid__pgrid_42710650975_pgeo_9217193_x__adext__ptid_kwd-312570251680">
-            <div id="sing-up">
-                Sing-up on Amazon
-            </div>
-        </a>
+      <img id="fondo1" src="./src/images/FondoTwitch.png" alt="Fondo" />
+      <img
+        id="prime"
+        src="./src/images/LogoPrimeE2.png"
+        alt="primeEntertaiment"
+      />
+      <h1 id="text1">Your favorite content, on one place only.</h1>
+      <p id="text2">
+        Now you can enjoy everything from Amazon Prime Video and Twitch Prime
+        with you Amazon Prime subscription on one place that brings all the
+        entertainment you love.
+      </p>
+      <a
+        href="https://www.primevideo.com/offers/nonprimehomepage/ref=dvm_pds_brd_co_hk_s_g_mkw_srWXdTWBq-dc_pcrid_645960032596?mrntrk=slid__pgrid_42710650975_pgeo_9217193_x__adext__ptid_kwd-312570251680"
+        target="_blank"
+      >
+        <div id="sing-up">Sing-up on Amazon</div>
+      </a>
     </div>
 
     <div class="blue-divs">
-        <h1 id="live">Live Content and the palm of your hand</h1>
-        <br>
-        <img id="tv" src="./src/images/tv.png" alt="tv">
-        <p id="p1">With 4K HDR quality, you can enjoy all of the live content you like to see , from Sports events to
-            E-Sports events</p>
+      <h1 id="live">Live Content and the palm of your hand</h1>
+      <br />
+      <img id="tv" src="./src/images/tv.png" alt="tv" />
+      <p id="p1">
+        With 4K HDR quality, you can enjoy all of the live content you like to
+        see , from Sports events to E-Sports events
+      </p>
     </div>
 
     <div class="blue-divs">
-        <h1 id="like">Don’t like to watch Live? No problem , we got you covered</h1>
-        <div id="movies">
-            <img src="./src/images/Rectangle 4.png" alt="">
-            <img src="./src/images/movie1.png" alt="">
-            <img src="./src/images/movie2.png" alt="">
-            <img src="./src/images/movie3.png" alt="">
-            <img src="./src/images/movie5.png" alt="">
-        </div>
-        <p id="p2">You’ll find a variety of movies, not only for adults<br> but also for your family, with our without internet. 24/7. On demand.</p>
+      <h1 id="like">
+        Don’t like to watch Live? No problem , we got you covered
+      </h1>
+      <div id="movies">
+        <img src="./src/images/Rectangle 4.png" alt="" />
+        <img src="./src/images/movie1.png" alt="" />
+        <img src="./src/images/movie2.png" alt="" />
+        <img src="./src/images/movie3.png" alt="" />
+        <img src="./src/images/movie5.png" alt="" />
+      </div>
+      <p id="p2">
+        You’ll find a variety of movies, not only for adults<br />
+        but also for your family, with our without internet. 24/7. On demand.
+      </p>
     </div>
 
     <div class="blue-divs">
-        <h1 id="cancel">
-            Cancel any time , anywhere
-        </h1>
-        <img id="cancelar" src="./src/images/Icon metro-cancel.svg" alt="">
-        <p id="p3">If you don’t like our services, you can cancel anytime you want , no contracts,<br> no fees.</p>
+      <h1 id="cancel">Cancel any time , anywhere</h1>
+      <img id="cancelar" src="./src/images/Icon metro-cancel.svg" alt="" />
+      <p id="p3">
+        If you don’t like our services, you can cancel anytime you want , no
+        contracts,<br />
+        no fees.
+      </p>
     </div>
 
     <h1 id="compatibles">Compatibles devices</h1>
-    <p id="p4">There’s a range of devices where you can enjoy all of the content available in<br> Prime Entertainment:</p>
+    <p id="p4">
+      There’s a range of devices where you can enjoy all of the content
+      available in<br />
+      Prime Entertainment:
+    </p>
 
     <div id="devices">
-        <img src="./src/images/FlechaIzq.png" alt="">
-        <img id="device1" src="./src/images/Image2.png" alt="">
-        <img id="device2" src="./src/images/Image1.png" alt="">
-        <img id="device3" src="./src/images/Image3.png" alt="">
-        <img src="./src/images/FlechaDer.png" alt="">
+      <img src="./src/images/FlechaIzq.png" alt="" />
+      <img id="device" src="./src/images/Image2.png" alt="" />
+      <img src="./src/images/Image1.png" alt="" />
+      <img src="./src/images/Image3.png" alt="" />
+      <img src="./src/images/FlechaDer.png" alt="" />
     </div>
-</body>
 
+    <footer>
+      <a
+        href="https://www.primevideo.com/help/ref=dvm_MLP_NA_privacy?nodeId=202064890"
+        target="_blank"
+      >
+        <p>Privacy Policy</p>
+      </a>
+      <a
+        href="https://www.primevideo.com/help?nodeId=202095490&view-type=content-only"
+        target="_blank"
+      >
+        <p>Terms of Use</p>
+      </a>
+      <a
+        href="https://www.amazon.com/gp/help/customer/display.html?nodeId=GNW5VKFXMF72FFMR"
+        target="_blank"
+      >
+        <p>Sales and Refunds</p>
+      </a>
+      <a
+        href="https://www.amazon.com/gp/help/customer/display.html?nodeId=G2B9L3YR7LR8J4XP"
+        target="_blank"
+      >
+        <p>Legal</p>
+      </a>
+      <a href="https://www.aboutamazon.com/site-map" target="_blank">
+        <p>Site Map</p>
+      </a>
+    </footer>
+  </body>
 </html>
