feat: :tada: Finish

--- a/dia5/saldo.html
+++ b/dia5/saldo.html
@@ -9,7 +9,7 @@
       href="https://www.metrolinea.gov.co/v3.0/sites/default/files/favicon.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="./src/styles/styles.css" />
+    <link rel="stylesheet" href="./src/styles/saldo.css" />
   </head>
   <body>
     <header>
@@ -17,8 +17,8 @@
         src="./src/images/1200px-Metrolínea_logo.svg.png"
         alt="MetrolineaLinea"/>
       <div id="navbar">
-        <a class="activo" href=""> Comprar Tarjeta </a>
-        <a href="saldo.html"> Ver Saldo </a>
+        <a href="index.html"> Comprar Tarjeta </a>
+        <a  class="activo" href=""> Ver Saldo </a>
         <img src="./src/images/Icon ionic-ios-search.png" alt="Search-icon" />
         <img
           src="./src/images/Icon feather-shopping-cart.png"
@@ -27,27 +27,32 @@
     </header>
     <div id="sidebar">
         <img src="./src/images/Icon ionic-ios-arrow-up.png" alt="arrow-up" />
-        <p class="especial">Cantidad</p>
+        <p class="especial">Valor</p>
         <div id="cantidades">
-            <span>04</span>
-            <p class="especial">05</p>
-            <span>06</span>
+            <span>$1000</span>
+            <p class="especial">$1500</p>
+            <span>$2000</span>
         </div>
         <p></p>
         <img src="./src/images/Icon ionic-ios-arrow-down.png" alt="">
     </div>
     <div id="tarjeta">
         <img src="./src/images/Metrolinea (2).png" alt="">
+        <h1>Tarjeta Metrolínea de "Pepito Perez"</h1>
+        <h3>Saldo Actual = $3000 COP</h3>
+        <h2>Saldo Escogido:</h2>
+        <div id="saldo">
+            <p></p>
+            <p>$1500</p>
+            <p></p>
+        </div>
     </div>
     <footer>
-        <div>
-            <h1>Tarjeta Metrolínea (Saldo $3000 COP)</h1>
-            <h3>$3000 COP</h3>
-        </div>
+
         <a href="">
-            <div id="btn-comprar">
+            <div id="btn-recargar">
                 <img src="./src/images/1200px-Metrolínea_logo.svg.png" alt="">
-                <span>Comprar</span>
+                <span>Recargar</span>
             </div>
         </a>
 
