--- a/dia9/index.html
+++ b/dia9/index.html
@@ -3,38 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grid</title>
     <link rel="stylesheet" href="./src/styles/styles.css" />
+    <title>Grid</title>
   </head>
   <body>
     <div class="main">
-      <div id="section-1">
+      <div class="item-1">
         <iframe
-          src="https://player.vimeo.com/video/854191048?h=935ef5e364&title=0&muted=1&loop=1&background=1&quality=1080p&app_id=122963"
+          src="https://player.vimeo.com/video/854191048?h=935ef5e364&amp;title=0&amp;muted=1&amp;loop=1&amp;background=1&amp;quality=1080p&amp;app_id=122963"
+          width="370"
+          height="240"
           frameborder="0"
+          allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
+          title="DeEx-CS_Showcase"
+          data-ready="true"
         ></iframe>
       </div>
-      <div id="section-2">
-        <h1>
-          We deeply believe that sistainble choices should be simple choices -
-          so we make it easy and painless for you to make the switch to Earth
-          friendly packaging.
-        </h1>
-        <p>
-          And by owning the supply chain from end to end, we make sure that
-          every decision in the process benefits the planet.
-        </p>
+      <div class="item-2">
+        <img
+          src="./src/images/Koto-x-De-extinction-Long-Form-1-1300x1733.jpg"
+          alt=""
+        />
       </div>
-      <div id="section-3">
+      <div class="item-3">
         <iframe
-          src="https://player.vimeo.com/video/853988616?h=437ec40c29&title=0&muted=1&loop=1&background=1&quality=1080p&app_id=122963"
+          src="https://player.vimeo.com/video/853988616?h=437ec40c29&amp;title=0&amp;muted=1&amp;loop=1&amp;background=1&amp;quality=1080p&amp;app_id=122963"
+          width="370"
+          height="240"
           frameborder="0"
+          allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
+          title="081023_DeEx_Plasticfork"
+          data-ready="true"
         ></iframe>
       </div>
-      <div id="section-4">
+      <div class="item-4">
         <iframe
-          src="https://player.vimeo.com/video/853988588?h=c7b4a18ac3&title=0&muted=1&loop=1&background=1&quality=1080p&app_id=122963"
+          src="https://player.vimeo.com/video/853988588?h=c7b4a18ac3&amp;title=0&amp;muted=1&amp;loop=1&amp;background=1&amp;quality=1080p&amp;app_id=122963"
+          width="426"
+          height="240"
           frameborder="0"
+          allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
+          title="081023_DeEx_Little Changes"
+          data-ready="true"
         ></iframe>
       </div>
     </div>
